crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_069_FME7_Sunsoft5B_Pyokotan_no_Daimeiro_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-069-FME7-Sunsoft5B/Pyokotan no Daimeiro (Japan).zip
rom_sha256=6b7244a00022b10a21f4f3127a7bf015da761566e22753c77213a541faa210ee
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=0373322b8ee74abc
checkpoint f900 fb_fnv1a64=86ecb21c6fdc2010
checkpoint f1100 fb_fnv1a64=86ecb21c6fdc2010
