crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_070_Bandai74_Arkanoid_II_J_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-070-Bandai74/Arkanoid II (J) [!].zip
rom_sha256=f4ce79fa99f4ef7d1e82d9156a7726132c9905c88d5ee51c9452d83917aef5c5
frames=1141
fb_bytes=245760
cycles=33949775
audio_samples=836505
audio_fnv1a64=833f028eb745baae
checkpoint f900 fb_fnv1a64=45eeba4d8e40af1a
checkpoint f1100 fb_fnv1a64=0c1d7ae9556b08ca
