crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_070_Bandai74_Family_Trainer_4_Jogging_Race_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-070-Bandai74/Family Trainer 4 - Jogging Race (Japan).zip
rom_sha256=1bbbf5845222f3befc8f6a4f4802f77a889094d2a2f622f268951c6192588fc0
frames=1141
fb_bytes=245760
cycles=33949777
audio_samples=836505
audio_fnv1a64=9cc1c81371dc4c30
checkpoint f900 fb_fnv1a64=89ce64d013f9c8f6
checkpoint f1100 fb_fnv1a64=f8ec4ab731aadec3
